Projects - fixed spacing on font-size

--- a/src/styles/_projects.scss
+++ b/src/styles/_projects.scss
@@ -128,12 +128,13 @@
         justify-content: space-evenly;
         align-items: center;
         h1 {
-          width: 30%;
+          width: 32%;
           height: auto;
           margin: 2%;
           padding: 0;
-          font-size: 2em;
+          font-size: 1.25em;
           text-align: left;
+          font-weight: 500;
         }
         p {
           width: 50%;
@@ -160,7 +161,7 @@
         }
       }
       .reversedImage {
-        margin: 0 2vh 2vh 2vh;
+        margin: 2vh 2vh 2vh 2vh;
         width: 90vw;
         background: $projectsBackgroundTextColor;
         transition: $transitionProject;
